--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #999999;
+  background-color: #63352cb6;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -16,18 +16,19 @@ input {
 
 img {
   height: 200px;
+  margin: 5%;
 }
 
 button {
   border: 1px solid black;
-  background-color: #cc4949;
+  background-color: #496ecc;
   color: white;
   padding: 8px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #ff4b4b;
+  background-color: #5652e0;
 }
 
 .search-section {
@@ -36,4 +37,18 @@ button:hover {
   align-items: center;
   padding: 10px;
   margin: 10px;
+}
+.movie-name {
+  display: block;
+  margin-top: 5%;
+}
+
+.movie-details {
+  text-align: left;
+  margin: 10%;
+  
+}
+li {
+  list-style: none;
+ display: block;
 }
